--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,4 +2,17 @@ h1 {
     text-transform: capitalize;
     font-family: 'Merriweather', sans-serif;
     text-align: center;
+    color: #f2f2f2;
+
+}
+body{
+    background-color: hsl(225, 100%, 10%);
+}
+
+#introduction-p {
+    color: #f2f2f2;
+}
+
+#objective-list {
+    color: #f2f2f2;
 }
