--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,10 +6,13 @@ h1 {
 
 }
 body{
-    background-color: hsl(225, 100%, 10%);
+    background-color: hsl(210, 51%, 20%);
 }
 
-#introduction-p {
+#introduction-par {
+    color: #f2f2f2;
+}
+#goals-par{
     color: #f2f2f2;
 }
 
@@ -19,13 +22,13 @@ body{
 
 .photo-text{
     height: auto;
-    max-width: 95%;
-    left: 0px;
-    right: 0px;
+    max-width: 85%;
+    text-align: center;
 }
 #myImage {
-    width: 95%;
+    width: 85%;
     height: auto;
-    left: 0px;
-    right: 0px;
+    text-align: center;
+    border:  10px solid #31669b;
+    box-shadow: 10px 10px;
 }
