--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,19 +11,34 @@ body{
 
 #introduction-par {
     color: #f2f2f2;
+    padding: 5px;
+
 }
 #goals-par{
     color: #f2f2f2;
+    padding: 5px;
+    position: relative;
+    bottom: 150px;
 }
 
-#objective-list {
+#updates-list {
     color: #f2f2f2;
+    padding: 5px;
+    text-align: center;
+
+}
+#update-header{
+    color: #f2f2f2;
+    padding: 5px;
+    text-align: center;
+    text-decoration: underline;
 }
 
 .photo-text{
     height: auto;
     max-width: 85%;
     text-align: center;
+    margin-bottom: 250px;
 }
 #myImage {
     width: 85%;
@@ -31,4 +46,5 @@ body{
     text-align: center;
     border:  10px solid #31669b;
     box-shadow: 10px 10px;
+    margin-bottom: 250px;
 }
