--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,30 +1,30 @@
 h1 {
     text-transform: capitalize;
-    font-family: 'Merriweather', sans-serif;
+    font-family: 'Bebas Neue', cursive;
     text-align: center;
     color: #f2f2f2;
+    font-size: 60px;
 
 }
 body{
     background-color: hsl(210, 51%, 20%);
 }
 
-#introduction-par {
-    color: #f2f2f2;
-    padding: 5px;
-
-}
 #goals-par{
     color: #f2f2f2;
     padding: 5px;
     position: relative;
     bottom: 150px;
+    font-family: 'EB Garamond', serif;
+    font-size: 25px;
 }
 
 #updates-list {
     color: #f2f2f2;
     padding: 5px;
     text-align: center;
+    font-family: 'EB Garamond', serif;
+    font-size: 25px;
 
 }
 #update-header{
@@ -32,6 +32,8 @@ body{
     padding: 5px;
     text-align: center;
     text-decoration: underline;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 35px;
 }
 
 .photo-text{
@@ -46,5 +48,6 @@ body{
     text-align: center;
     border:  10px solid #31669b;
     box-shadow: 10px 10px;
-    margin-bottom: 250px;
+    margin-bottom: 150px;
+    border-radius: 15px;
 }
