--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,3 +51,14 @@ body{
     margin-bottom: 150px;
     border-radius: 15px;
 }
+#navbar{
+    position:fixed;
+    width: 100%;
+}
+#navLinks{
+    color: #f2f2f2;
+    text-transform: capitalize;
+    font-size: 20px;
+    text-align: center;
+
+}
